css/main.css
/* ... */
ul#nav li {
	position: relative;
	list-style: none;
   height: 54px;

   display: inline-block;
}
ul#nav > li.active a {
   background: #FDD7B3;
   color: #fff !important;
}

/* Links */
ul#nav li a {
   display: block;
   padding: 0 14px;
   line-height: 54px;
	text-decoration: none;
   text-align: left;
   color: #fff;

	-webkit-transition: color .2s ease-in-out;
	-moz-transition: color .2s ease-in-out;
	-o-transition: color .2s ease-in-out;
	-ms-transition: color .2s ease-in-out;
	transition: color .2s ease-in-out;
}

ul#nav li a:active { background-color: transparent !important; }
ul#nav li:hover > a,
ul#nav li.active a { color: #FDD7B3; }





/*=====Hero Top=====*/
.masthead{
	position:relative;
	padding:270px 0px;
	color:#FFF;
	text-align:center;
	text-shadow:0 1px 0 rgba(0,0,0,.1);
	background-color:#FDD7B3;
	background-image:url("../images/city_skyline_resized.jpg");
	background-repeat:no-repeat;
	background-position:center center;
	background-attachment:fixed;
	-webkit-background-size:cover;
	-moz-background-size:cover;
	-o-background-size:cover;
	background-size:cover;
	}

.masthead .container{
	animation:fadein 2s;
	-moz-animation:fadein 2s;
	-webkit-animation:fadein 2s;
	-o-animation:fadein 2s;
	}

.masthead h2{
	text-align: center;
}

.loading *{
	-webkit-animation:none!important;
	-moz-animation:none!important;
	-ms-animation:none!important;
	-o-animation:none!important;
	}

@keyframes fadein{
	from{opacity:0;
	-webkit-transform:translateY(-30px);
	-moz-transform:translateY(-30px);
	transform:translateY(-30px);}
	to{opacity:1;
	-webkit-transform:translateY(0);
	-moz-transform:translateY(0);
	transform:translateY(0);}}
	
@-moz-keyframes fadein { /* Firefox */
	 from {
	 opacity:0;
	 -webkit-transform: translateY(-30px);
	-moz-transform: translateY(-30px);
	transform: translateY(-30px);
	}to{opacity:1;-webkit-transform:translateY(0);-moz-transform:translateY(0);transform:translateY(0);}
	}

@-webkit-keyframes fadein { /* Safari and Chrome */
	 from {
	 opacity:0;
	 -webkit-transform: translateY(-30px);
	-moz-transform: translateY(-30px);
	transform: translateY(-30px);
}

to {
	opacity:1;
	-webkit-transform: translateY(0);
	-moz-transform: translateY(0);
	transform: translateY(0);
}
}
@-o-keyframes fadein { /* Opera */
 from {
 opacity:0;
 -webkit-transform: translateY(-30px);
-moz-transform: translateY(-30px);
transform: translateY(-30px);
}
to {
	opacity:1;
	-webkit-transform: translateY(0);
	-moz-transform: translateY(0);
	transform: translateY(0);
}
} 
/*little box*/
hr {
    display: block;
    unicode-bidi: isolate;
    -webkit-margin-before: 0.5em;
    -webkit-margin-after: 0.5em;
    -webkit-margin-start: auto;
    -webkit-margin-end: auto;
    overflow: hidden;
    border-width: 10px;
    max-width: 70px;
    border-style: solid;
}
hr.thicker {
	border-width:0.5em;
    border-color: white;
}


/*==== Boucing Arrow Animation ====*/

@keyframes arrowbounce {
from {
-webkit-transform: translateY(0);
-moz-transform: translateY(0);
transform: translateY(0);
}
to {
	-webkit-transform: translateY(-20px);
	-moz-transform: translateY(-20px);
	transform: translateY(-20px);
}
}
@-moz-keyframes arrowbounce { /* Firefox */
from {
-webkit-transform: translateY(0);
-moz-transform: translateY(0);
transform: translateY(0);
}
to {
	-webkit-transform: translateY(-20px);
	-moz-transform: translateY(-20px);
	transform: translateY(-20px);
}
}
@-webkit-keyframes arrowbounce { /* Safari and Chrome */
from {
-webkit-transform: translateY(0);
-moz-transform: translateY(0);
transform: translateY(0);
}
to {
	-webkit-transform: translateY(-20px);
	-moz-transform: translateY(-20px);
	transform: translateY(-20px);
}
}
@-o-keyframes arrowbounce { /* Opera */
from {
-webkit-transform: translateY(0);
-moz-transform: translateY(0);
transform: translateY(0);
}
to {
	-webkit-transform: translateY(-20px);
	-moz-transform: translateY(-20px);
	transform: translateY(-20px);
}
}
.scrollto, .scrollto:hover {
	margin:30px;
	display:block;
	color:#FFF;
	text-decoration:none;
	width:200px;
	margin:0 auto;
}
.scrollto--arrow {
	padding:10px;
}
.scrollto--arrow img {
	animation: arrowbounce 1s alternate infinite;
	-moz-animation: arrowbounce 1s alternate infinite; /* Firefox */
	-webkit-animation: arrowbounce 1s alternate infinite; /* Safari and Chrome */
	-o-animation: arrowbounce 1s alternate infinite; /* Opera */
}



/*=====intro=====*/



#intro {
   background: #FFFFFF;
   padding-top: 120px;
   padding-bottom: 66px;
   overflow: hidden;
}

#intro h2{
	color:#01143C;
	font-weight: 900;
	font-size: 42;
}
#intro h3 {
   color: #425B7A;
}

.tm-section-2 {	max-width: 1050px; }
.tm-section-3-inner { max-width: 1250px; }
.tm-section-5-inner { 
	padding: 80px 5%;
	max-width: 1000px; 
}

.tm-section-2 { padding: 60px 5% 40px; }
.tm-section-3 {	padding: 60px 5% 20px; }

.tm-section-4 { 
	padding: 60px 5% 90px; 
	max-width: 900px;
}

.tm-media-img { 
	padding: 0.5rem;
	box-shadow: 0px 0px 4px 2px rgba(197, 197, 197, 0.5);
	display: block;
	margin: 10px 100px 30px;
}
.tm-media-title {
	padding-bottom: 10px;
	line-height: 1.5;
}

.tm-media-description {	line-height: 2em; }

.tm-media-row {
	background: #FFFFFF;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-flex-direction: row;
	    -ms-flex-direction: row;
	        flex-direction: row;
	-webkit-align-items: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-justify-content: center;
	    -ms-flex-pack: center;
	        justify-content: center;
}

.tm-media-row:last-child { margin-bottom: 0; }

.tm-gray-text { color: #666666; }
.tm-gray-text-2 { color: #656565; }
/* ... */

